// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> Arrow story renders snapshot 1`] = `
<div>
  <button
    aria-controls="headlessui-popover-panel-7"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    id="headlessui-popover-button-6"
    type="button"
  >
    Open Popover
  </button>
  <article
    class="popover-content"
    data-popper-escaped="true"
    data-popper-placement="bottom"
    data-popper-reference-hidden="true"
    id="headlessui-popover-panel-7"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 10px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        style="width: 250px;"
      >
        My popover content Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
      </div>
    </div>
    <div
      aria-hidden="true"
      class="popover-content__arrow"
      data-popper-arrow="true"
    />
  </article>
</div>
`;

exports[`<Popover /> Bottom story renders snapshot 1`] = `
<div>
  <button
    aria-controls="headlessui-popover-panel-22"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-21"
    type="button"
  >
    Open Popover
  </button>
  <article
    class="popover-content"
    data-popper-escaped="true"
    data-popper-placement="bottom"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-22"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 10px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        style="width: 250px;"
      >
        My popover content Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
      </div>
    </div>
  </article>
</div>
`;

exports[`<Popover /> BottomEnd story renders snapshot 1`] = `
<div>
  <button
    aria-controls="headlessui-popover-panel-47"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-46"
    type="button"
  >
    Open Popover
  </button>
  <article
    class="popover-content"
    data-popper-escaped="true"
    data-popper-placement="bottom-end"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-47"
    style="position: absolute; left: 0px; top: 0px; right: 0px; transform: translate(0px, 10px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        style="width: 250px;"
      >
        My popover content Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
      </div>
    </div>
  </article>
</div>
`;

exports[`<Popover /> BottomStart story renders snapshot 1`] = `
<div>
  <button
    aria-controls="headlessui-popover-panel-42"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-41"
    type="button"
  >
    Open Popover
  </button>
  <article
    class="popover-content"
    data-popper-escaped="true"
    data-popper-placement="bottom-start"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-42"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 10px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        style="width: 250px;"
      >
        My popover content Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
      </div>
    </div>
  </article>
</div>
`;

exports[`<Popover /> Default story renders snapshot 1`] = `
<div>
  <button
    aria-controls="headlessui-popover-panel-5"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-4"
    type="button"
  >
    Open Popover
  </button>
  <article
    class="popover-content"
    data-popper-escaped="true"
    data-popper-placement="bottom"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-5"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 10px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        style="width: 250px;"
      >
        My popover content Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
      </div>
    </div>
  </article>
</div>
`;

exports[`<Popover /> Left story renders snapshot 1`] = `
<div>
  <button
    aria-controls="headlessui-popover-panel-27"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-26"
    type="button"
  >
    Open Popover
  </button>
  <article
    class="popover-content"
    data-popper-escaped="true"
    data-popper-placement="left"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-27"
    style="position: absolute; left: 0px; top: 0px; right: 0px; transform: translate(-10px, 0px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        style="width: 250px;"
      >
        My popover content Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
      </div>
    </div>
  </article>
</div>
`;

exports[`<Popover /> LeftEnd story renders snapshot 1`] = `
<div>
  <button
    aria-controls="headlessui-popover-panel-67"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-66"
    type="button"
  >
    Open Popover
  </button>
  <article
    class="popover-content"
    data-popper-escaped="true"
    data-popper-placement="left-end"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-67"
    style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; transform: translate(-10px, 0px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        style="width: 250px;"
      >
        My popover content Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
      </div>
    </div>
  </article>
</div>
`;

exports[`<Popover /> LeftStart story renders snapshot 1`] = `
<div>
  <button
    aria-controls="headlessui-popover-panel-62"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-61"
    type="button"
  >
    Open Popover
  </button>
  <article
    class="popover-content"
    data-popper-escaped="true"
    data-popper-placement="left-start"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-62"
    style="position: absolute; left: 0px; top: 0px; right: 0px; transform: translate(-10px, 0px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        style="width: 250px;"
      >
        My popover content Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
      </div>
    </div>
  </article>
</div>
`;

exports[`<Popover /> Right story renders snapshot 1`] = `
<div>
  <button
    aria-controls="headlessui-popover-panel-17"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-16"
    type="button"
  >
    Open Popover
  </button>
  <article
    class="popover-content"
    data-popper-escaped="true"
    data-popper-placement="right"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-17"
    style="position: absolute; left: 0px; top: 0px; transform: translate(10px, 0px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        style="width: 250px;"
      >
        My popover content Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
      </div>
    </div>
  </article>
</div>
`;

exports[`<Popover /> RightEnd story renders snapshot 1`] = `
<div>
  <button
    aria-controls="headlessui-popover-panel-57"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-56"
    type="button"
  >
    Open Popover
  </button>
  <article
    class="popover-content"
    data-popper-escaped="true"
    data-popper-placement="right-end"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-57"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(10px, 0px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        style="width: 250px;"
      >
        My popover content Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
      </div>
    </div>
  </article>
</div>
`;

exports[`<Popover /> RightStart story renders snapshot 1`] = `
<div>
  <button
    aria-controls="headlessui-popover-panel-52"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-51"
    type="button"
  >
    Open Popover
  </button>
  <article
    class="popover-content"
    data-popper-escaped="true"
    data-popper-placement="right-start"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-52"
    style="position: absolute; left: 0px; top: 0px; transform: translate(10px, 0px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        style="width: 250px;"
      >
        My popover content Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
      </div>
    </div>
  </article>
</div>
`;

exports[`<Popover /> Top story renders snapshot 1`] = `
<div>
  <button
    aria-controls="headlessui-popover-panel-12"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-11"
    type="button"
  >
    Open Popover
  </button>
  <article
    class="popover-content"
    data-popper-escaped="true"
    data-popper-placement="top"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-12"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -10px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        style="width: 250px;"
      >
        My popover content Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
      </div>
    </div>
  </article>
</div>
`;

exports[`<Popover /> TopEnd story renders snapshot 1`] = `
<div>
  <button
    aria-controls="headlessui-popover-panel-37"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-36"
    type="button"
  >
    Open Popover
  </button>
  <article
    class="popover-content"
    data-popper-escaped="true"
    data-popper-placement="top-end"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-37"
    style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; transform: translate(0px, -10px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        style="width: 250px;"
      >
        My popover content Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
      </div>
    </div>
  </article>
</div>
`;

exports[`<Popover /> TopStart story renders snapshot 1`] = `
<div>
  <button
    aria-controls="headlessui-popover-panel-32"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-31"
    type="button"
  >
    Open Popover
  </button>
  <article
    class="popover-content"
    data-popper-escaped="true"
    data-popper-placement="top-start"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-32"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -10px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        style="width: 250px;"
      >
        My popover content Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
      </div>
    </div>
  </article>
</div>
`;
